--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
+        <link rel="shortcut icon" type="image/x-icon" href="extended/favicon.ico">
         <title>KA Discord Server | HTML</title>
         <style>
             body {
