--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ Server name: Khan Academy Extended Experience.
         .info-box {
             background-color: rgb(255, 255, 255);
             text-align: center;
-            width: calc(100% - 25px);
+            width: 465px;
             margin-left: auto;
             margin-right: auto;
             margin-bottom: 15px;
